--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": "./",
-    "checkJs": true,
+    "checkJs": false,
     "target": "ES2020",
     "noImplicitAny": true,
     "noUncheckedIndexedAccess": true,
